--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
 
     <application
             android:allowBackup="true"
@@ -16,6 +15,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Notifly"
             tools:targetApi="31">
+        <activity
+                android:name=".activities.EditRuleActivity"
+                android:exported="false"/>
         <activity
                 android:name=".activities.PermissionActivity"
                 android:exported="false"/>
