--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:theme="@style/Theme.Notifly"
             tools:targetApi="31">
         <activity
+                android:name=".activities.AppSelectActivity"
+                android:exported="false"/>
+        <activity
                 android:name=".activities.EditRuleActivity"
                 android:exported="false"/>
         <activity
