--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
-
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" tools:ignore="QueryAllPackagesPermission"/>
 
     <application
             android:allowBackup="true"
@@ -17,6 +16,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Notifly"
             tools:targetApi="31">
+        <activity
+                android:name=".activities.SettingsActivity"
+                android:exported="false"/>
         <activity
                 android:name=".activities.AppSelectActivity"
                 android:exported="false"/>
